leon final draft

--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
     <p class="text-center">Recreate the table without removing any DOM elements</p>
     <div id="first-container" class="container">
         <div class="row">
-            <div class="col-6 column-1">
+            <div class="col-6 column-1 d-flex justify-content-center align-items-center">
                 First column
             </div>
-            <div class="col-2 column-2">
+            <div class="col-2 column-2 d-flex justify-content-center align-items-center">
                 Second column
             </div>
             <div class="col-4 column-3">
-                <div class="row d-flex  w-100 flex-column">
-                    <div class=" flex-fill part-1">
+                <div class="row">
+                    <div class="col-12 part-1 d-flex justify-content-center align-items-center">
                         <p>Third Column Part 1</p>
                     </div>
-                    <div class=" flex-fill part-2">
+                    <div class="col-12 part-2 d-flex justify-content-center align-items-center">
                         <p>Third Column Part 2</p>
                     </div>
-                    <div class=" flex-fill part-3">
+                    <div class="col-12 part-3 d-flex justify-content-center align-items-center">
                         <p>Third Column Part 3</p>
                     </div>
                 </div>
